commons/state-storage/envoy.yaml
node:
  id: state-storage
  cluster: state-storage
static_resources:
  listeners:
    - name: state-storage
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 7379
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                common_http_protocol_options:
                  idle_timeout: 1s
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: "/dev/stdout"
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: state-storage
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              require_client_certificate: true
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: "/etc/envoy/certs/envoy.crt"
                    private_key:
                      filename: "/etc/envoy/certs/envoy.key"
                validation_context:
                  trusted_ca:
                    filename: "/etc/envoy/certs/ca.crt"
  clusters:
    - name: state-storage
      connect_timeout: 0.25s
      type: STRICT_DNS
      load_assignment:
        cluster_name: state-storage
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: state-storage
                      port_value: 7379
